# rCore-Tutorial-v3-with-page-replacement-and-sched-algorithms

./: .gitignore  Cargo.toml  Makefile  note.md
ch8/: Cargo.toml
ch8/src/: main.rs
frame-manage/: Cargo.toml
frame-manage/src/: clock.rs  clock_improve.rs  clock_queue.rs  config.rs  fifo.rs  lib.rs  manager.rs  pff.rs  plugins.rs  virt_frame_swapper.rs  work_set.rs
kernel-vm/src/space/: mod.rs
scheduler/: Cargo.toml  README.md
scheduler/src/: args_handler.rs  default_manager.rs  edf.rs  hrrn.rs  lib.rs  lottery.rs  rms.rs  scheduler.rs  sjf.rs  stcf.rs  stride.rs  syscall_args.rs
syscall/src/: user.rs
syscall/src/kernel/: mod.rs
task-manage/: Cargo.toml
task-manage/src/: lib.rs  thread_manager.rs
timer/: Cargo.toml
timer/src/: lib.rs  timer.rs
user/: cases.toml
user/src/: config.rs  lib.rs
xtask/src/: main.rs
