[package]
name = "rcore-scheduler"
description = "Implement some of the schedule algorithm for monocore"
version = "0.0.0"
authors = ["Emily <1207666367@qq.com>"]
repository = ""
documentation = ""
license = "WTFPL"
readme = "README.md"
keywords = ["rcore", "scheduler"]
categories = ["no-std"]

[dependencies]
rcore-utils = { path = "../utils", optional = true }

[features]
seq = []
sjf = []
stcf = []
hrrn = ["dep:rcore-utils"]
stride = []